# slchess

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  clear_cmake.sh  conanfile.txt  run_cmake.sh  run_tests.sh
CMake/: Conan.cmake  ConfigureGnuDirs.cmake  EnableCCache.cmake  EnableCPPCheck.cmake  EnableClangTidy.cmake  PreventInSourceBuilds.cmake  PrintSummary.cmake
sources/: CMakeLists.txt  bitboard.hpp  config.hpp  config.hpp.in  slchess.cpp
tests/: CMakeLists.txt  bitboard.test.cpp  bitboard_8x8.test.cpp
